--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  link(rel='stylesheet', href='/stylesheets/accueil.css')
+  link(rel='stylesheet', href='/stylesheets/glowingText.css')
+  h1(class="glow") Un Jour Radieux
+  .container
+    img(src="./images/back.jpg").background
+    - for (i = 1; i <= 100; i++)
+      .circle-container
+        .circle
