--- a/public/stylesheets/glowingText.css
+++ b/public/stylesheets/glowingText.css
@@ -1,13 +1,14 @@
 
 @font-face {
 	font-family: apo;
-	src: url(/public/fonts/scorched-earth-font/Scorchedearth-4Ljp.otf);
+	src: url("../fonts/scorched-earth-font/Scorchedearth-4Ljp.otf");
 }
 
 .glow {
     font-family: apo;
     font-size: 5vw;
     color: rgb(0, 0, 0);
+    top: 10%;
     text-align: center;
     -webkit-animation: glow 2s ease-in-out infinite alternate;
     -moz-animation: glow 2s ease-in-out infinite alternate;
@@ -16,9 +17,9 @@
   
   @-webkit-keyframes glow {
     from {
-      text-shadow: 0 0 5px #fff, 0 0 20px #fff, 0 0 30px #00e61f, 0 0 40px #00e645, 0 0 50px #00e61f, 0 0 60px #00e613, 0 0 70px #00e61f;
+      text-shadow: 0 0 5px #fff, 0 0 20px #fff, 0 0 10px #038114, 0 0 20px #038114, 0 0 30px #038114, 0 0 40px #038114, 0 0 50px #038114;
     }
     to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #0cdd39, 0 0 40px #4dff82, 0 0 50px #14c50e, 0 0 60px #04db45, 0 0 70px #4dff82, 0 0 80px #4dffac;
+      text-shadow: 0 0 20px #fff, 0 0 30px #0cdd39, 0 0 40px #39ce0c, 0 0 50px #0ee007, 0 0 40px #16db04, 0 0 500px #00ff0d, 0 0 60px #06df23;
     }
   }
