--- a/views/index.pug
+++ b/views/index.pug
@@ -3,9 +3,15 @@ extends layout
 block content
   link(rel='stylesheet', href='/stylesheets/accueil.css')
   link(rel='stylesheet', href='/stylesheets/glowingText.css')
-  h1(class="glow") Un Jour Radieux
-  .container
-    img(src="./images/back.jpg").background
-    - for (i = 1; i <= 100; i++)
-      .circle-container
-        .circle
+  link(rel='stylesheet', href='/stylesheets/background.css')
+
+  .mainPara
+    h1(class="glow") Un Jour Radieux
+
+    .container
+      //- img(src="./images/back.jpg").background
+      - for (i = 1; i <= 100; i++)
+        .circle-container
+          .circle
+
+  .mainPara
