--- a/public/stylesheets/glowingText.css
+++ b/public/stylesheets/glowingText.css
@@ -6,15 +6,36 @@
 
 .glow {
     font-family: apo;
-    font-size: 5vw;
+    font-size: 3vw;
     color: rgb(0, 0, 0);
     top: 10%;
     text-align: center;
     -webkit-animation: glow 2s ease-in-out infinite alternate;
     -moz-animation: glow 2s ease-in-out infinite alternate;
     animation: glow 2s ease-in-out infinite alternate;
+
   }
-  
+
+.radioactive {
+    position: static;
+    font-size: 10vw;
+    line-height: 0.8em;
+    text-align: center;
+    /* margin: auto 0; */
+    animation: spin 15s infinite linear;
+  }
+
+
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+
   @-webkit-keyframes glow {
     from {
       text-shadow: 0 0 5px #fff, 0 0 20px #fff, 0 0 10px #038114, 0 0 20px #038114, 0 0 30px #038114, 0 0 40px #038114, 0 0 50px #038114;
