--- a/views/index.pug
+++ b/views/index.pug
@@ -6,12 +6,15 @@ block content
   link(rel='stylesheet', href='/stylesheets/background.css')
 
   .mainPara
-    h1(class="glow") Un Jour Radieux
-
+    div(class="gridTitle")
+      div(class="radioactive fSign") ☢
+      h1(class="glow titre") Un Jour Radieux
+      div(class="radioactive sSign") ☢
     .container
       //- img(src="./images/back.jpg").background
       - for (i = 1; i <= 100; i++)
         .circle-container
           .circle
+    
 
   .mainPara
