--- a/views/index.pug
+++ b/views/index.pug
@@ -4,17 +4,88 @@ block content
   link(rel='stylesheet', href='/stylesheets/accueil.css')
   link(rel='stylesheet', href='/stylesheets/glowingText.css')
   link(rel='stylesheet', href='/stylesheets/background.css')
+  link(rel='stylesheet', href='/stylesheets/popup.css')
 
   .mainPara
     div(class="gridTitle")
       div(class="radioactive fSign") ☢
       h1(class="glow titre") Un Jour Radieux
       div(class="radioactive sSign") ☢
+
+    div(class="gridMenu")
+      a(class='button1' href="#popup1") Accueil
+      a(class='button2' href="#popup1") l'abri
+      a(class='button3' href="#popup1") Evenements
+      a(class='button4' href="#popup1") Reservation      
+
+
+    div(class="prez")
+      p Un jour Radieux vous plongeras dans un monde post-apocalyptique.
+      p Vous devrez mettre en pratique vos competence:
+      ul 
+        li Fouille
+        li Survie 
+        li Cooperation
+        li Ecoute
+
+
+
+
+    //- Code pour la PopUp de Reservation
+
+    #popup1.overlay
+      .popup
+        h2 Réservation
+        a.close(href='#') &times;
+        .content
+          | faite votre reservation
+          form.form-example(action='' method='get')
+
+            //- date
+            .form-example
+              label(for='date') Date de réservation : 
+              input#date(type='date' name='date' required='')
+
+            //- forfait
+
+            .form-example
+              label(for='forfait') Choisir un forfait : 
+              input#name(type='text' name='forfait' required='')
+
+            //- nombre de joueur
+
+            .form-example
+              label(for='nbJoueur') Nombre de participants : 
+              input#name(type='number' name='nbJoueur' value="1" required='' min="1" max="8")
+
+            //- nom prenom
+
+            .form-example
+              label(for='prenom') Prénom : 
+              input#name(type='number' name='prenom' required='')
+              label(for='nom') Nom:
+              input#name(type='number' name='nom' required='')
+
+            //- email et telephone  
+
+            .form-example
+              label(for='email') Email : 
+              input#email(type='email' name='email' required='')
+              label(for='telephone') Numéro de téléphone : 
+              input#email(type='tel' name='telephone' required='')
+
+            //- sub
+
+            .form-example
+              input(id="sub" type='submit' value='Réserver')
+
+
+
+
+  //- Code pour les Particules
+  .mainPara
     .container
       //- img(src="./images/back.jpg").background
       - for (i = 1; i <= 100; i++)
         .circle-container
           .circle
-    
-
-  .mainPara
