--- a/views/index.pug
+++ b/views/index.pug
@@ -6,27 +6,40 @@ block content
   link(rel='stylesheet', href='/stylesheets/background.css')
   link(rel='stylesheet', href='/stylesheets/popup.css')
 
+
+
   .mainPara
-    div(class="gridTitle")
-      div(class="radioactive fSign") ☢
-      h1(class="glow titre") Un Jour Radieux
-      div(class="radioactive sSign") ☢
+    .container
+      //- img(src="./images/back.jpg").background
+      - for (i = 1; i <= 500; i++)
+        .circle-container
+          .circle
+      div(class="header")
+        div(class="gridTitle")
+          div(class="radioactive fSign") ☢
+          h1(class="glow titre") Un Jour Radieux
+          div(class="radioactive sSign") ☢
 
-    div(class="gridMenu")
-      a(class='button1' href="#popup1") Accueil
-      a(class='button2' href="#popup1") l'abri
-      a(class='button3' href="#popup1") Evenements
-      a(class='button4' href="#popup1") Reservation      
+        div(class="gridMenu")
+          a(class='button1' href="#") Accueil
+          a(class='button2' href="#") l'abri
+          a(class='button3' href="#") Evenements
+          a(class='button4' href="#popup1") Reservation      
 
 
-    div(class="prez")
-      p Un jour Radieux vous plongeras dans un monde post-apocalyptique.
-      p Vous devrez mettre en pratique vos competence:
-      ul 
-        li Fouille
-        li Survie 
-        li Cooperation
-        li Ecoute
+        div(class="prez")
+          p Un jour Radieux vous plongeras dans un monde post-apocalyptique.
+          p Vous devrez mettre en pratique vos competences:
+          ul 
+            li Fouille
+            li Survie 
+            li Cooperation
+            li Ecoute
+    .mainPara
+      div(class="test")
+        | Prout
+  .mainPara
+
 
 
 
@@ -38,7 +51,7 @@ block content
         h2 Réservation
         a.close(href='#') &times;
         .content
-          | faite votre reservation
+
           form.form-example(action='' method='get')
 
             //- date
@@ -62,30 +75,19 @@ block content
 
             .form-example
               label(for='prenom') Prénom : 
-              input#name(type='number' name='prenom' required='')
+              input#name(type='text' name='prenom' required='')
               label(for='nom') Nom:
-              input#name(type='number' name='nom' required='')
+              input#name(type='text' name='nom' required='')
 
             //- email et telephone  
 
             .form-example
               label(for='email') Email : 
               input#email(type='email' name='email' required='')
-              label(for='telephone') Numéro de téléphone : 
+              label(for='telephone') Téléphone : 
               input#email(type='tel' name='telephone' required='')
 
             //- sub
 
             .form-example
               input(id="sub" type='submit' value='Réserver')
-
-
-
-
-  //- Code pour les Particules
-  .mainPara
-    .container
-      //- img(src="./images/back.jpg").background
-      - for (i = 1; i <= 100; i++)
-        .circle-container
-          .circle
