--- a/public/stylesheets/accueil.css
+++ b/public/stylesheets/accueil.css
@@ -2,17 +2,35 @@
     margin: 0;
     padding: 0;
   }
+
   
   html,
   body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    overflow-y: visible; /* Add vertical scrollbar */
+  }
+
+
+
+  .mainPara {
+    /* The image used */
+    background-image: url("../images/back.jpg");
+  
+    /* Full height */
+    height: 100%;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position:relative;     /* <<< this */
   }
   
-  body {
-    background-color: #021027;
-  }
+
 
   /************** Grille CSS************************/
 
@@ -35,23 +53,31 @@
     margin: 5vw;
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr;
     grid-template-rows: 0.5fr;
-    gap: 0px 15vw;
+    gap: 0vw 10vw;
     grid-template-areas:
       "bt1 bt2 bt3 bt4";
   }
 
 .gridMenu a {
-  font-size: 1em;
-  padding: 10px;
-  color: rgb(44, 44, 44);
+  font-size: 2vw;
+  padding: 0.5vw 2vw 0.5vw 2vw;
+  color: rgb(47, 48, 47);
   border: 2px solid #06D85F;
-  border-radius: 20px/50px;
+  border-radius: 0.5vw;
+  border-top: none;
+  border-bottom: none;
   text-decoration: none;
   cursor: pointer;
   transition: all 0.3s ease-out;
-  background-color: dimgray;
+  background-color: rgb(68, 64, 64);
+}
+
+
+.gridMenu a:hover {
+  text-shadow: 0 0 20px #fff, 0 0 30px #0cdd39, 0 0 40px #39ce0c, 0 0 50px #0ee007, 0 0 40px #16db04, 0 0 500px #00ff0d, 0 0 60px #06df23;
+  color: #60fa19;
 }
 
 .button1 { grid-area: bt1; }
@@ -62,10 +88,11 @@
 .button4 { grid-area: bt4; }
 
 
-.prez p{
+.prez{
+  text-align: center;
   color: aliceblue;
+  font-size: 2vw;
 }
-
 
 
 
@@ -81,6 +108,7 @@
   .background {
     display: block;
     position: absolute;
+    overflow: hidden;
     top: 0;
     left: 0;
     -o-object-fit: cover;
@@ -93,6 +121,7 @@
   
   .circle-container {
     position: absolute;
+    overflow: hidden;
     -webkit-transform: translateY(-10vh);
             transform: translateY(-10vh);
     -webkit-animation-iteration-count: infinite;
@@ -105,7 +134,7 @@
     height: 100%;
     border-radius: 50%;
     mix-blend-mode: screen;
-    background-image: radial-gradient(#0bda2d, #3a9b0d 10%, rgba(170, 255, 153, 0) 56%);
+    background-image: radial-gradient(#2ff750, #60fa19 10%, rgba(170, 255, 153, 0) 56%);
     -webkit-animation: fadein-frames 200ms infinite, scale-frames 2s infinite;
             animation: fadein-frames 200ms infinite, scale-frames 2s infinite;
   }
@@ -262,7 +291,7 @@
             animation-delay: 2814ms;
   }
   .circle-container:nth-child(4) {
-    width: 3px;
+    width: 1px;
     height: 3px;
     -webkit-animation-name: move-frames-4;
             animation-name: move-frames-4;
@@ -6960,34 +6989,4 @@
             animation-delay: 383ms;
   }
   
-  .message {
-    position: absolute;
-    right: 20px;
-    bottom: 10px;
-    color: white;
-    font-family: "Josefin Slab", serif;
-    line-height: 27px;
-    font-size: 18px;
-    text-align: right;
-    pointer-events: none;
-    -webkit-animation: message-frames 1.5s ease 5s forwards;
-            animation: message-frames 1.5s ease 5s forwards;
-    opacity: 0;
-  }
-  @-webkit-keyframes message-frames {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  @keyframes message-frames {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  
+ 
