--- a/public/stylesheets/popup.css
+++ b/public/stylesheets/popup.css
@@ -33,6 +33,7 @@
     margin-top: 0;
     color: #333;
     font-family: Tahoma, Arial, sans-serif;
+    padding: 0 0 2vw 0;
   }
 
 
@@ -61,7 +62,7 @@
 
 .popup #sub{
     font-size: 1em;
-    padding: 10px;
+    padding: 0.5vw 2vw 0.5vw 2vw;
     color: rgb(44, 44, 44);
     border: 2px solid #06D85F;
     border-radius: 20px/50px;
@@ -82,6 +83,10 @@ div.form-example {
 label, input {
     display: table-cell;
     margin-bottom: 10px;
+}
+
+label {
+    padding: 0.5vw;
 }
 
 label {
