--- a/views/index.pug
+++ b/views/index.pug
@@ -35,9 +35,8 @@ block content
             li Survie 
             li Cooperation
             li Ecoute
-    .mainPara
-      div(class="test")
-        | Prout
+        div(class="back")
+
   .mainPara
 
 
