--- a/public/stylesheets/accueil.css
+++ b/public/stylesheets/accueil.css
@@ -36,6 +36,7 @@
 
   .gridTitle {
     display: grid;
+    color: black;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 0.5fr;
     gap: 0px 0px;
