--- a/views/index.pug
+++ b/views/index.pug
@@ -28,16 +28,25 @@ block content
 
 
         div(class="prez")
-          p Un jour Radieux vous plongeras dans un monde post-apocalyptique.
+          p Un jour Radieux vous plongera dans un monde post-apocalyptique.
           p Vous devrez mettre en pratique vos competences:
           ul 
             li Fouille
             li Survie 
             li Cooperation
             li Ecoute
-        div(class="back")
 
+
+      div(class="contmap")
+        div(class="map")
+          p(class="doc") NOUS TROUVER
+          div(class="gmap")
+            iframe(style='border: 0;' src='https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2710.207049454749!2d-1.5729033!3d47.2125309!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4805ec0fcda6c4cb%3A0xd620ca38dafa1e9a!2s2+Rue+La+Motte+Picquet%2C+44100+Nantes!5e0!3m2!1sfr!2sfr!4v1423244007186' width='600' height='450' frameborder='0')
+
+
+  
   .mainPara
+
 
 
 
