--- a/public/stylesheets/accueil.css
+++ b/public/stylesheets/accueil.css
@@ -30,7 +30,9 @@
     position:relative;     /* <<< this */
   }
   
-
+.header {
+  margin-bottom: 5vw;
+}
 
   /************** Grille CSS************************/
 
