--- a/views/index.pug
+++ b/views/index.pug
@@ -36,7 +36,7 @@ block content
             li Cooperation
             li Ecoute
 
-
+  .mainPara
       div(class="contmap")
         div(class="map")
           p(class="doc") NOUS TROUVER
